--- a/README.Rmd
+++ b/README.Rmd
@@ -33,20 +33,28 @@ devtools::install_github("Rasmusdamaau/GSADF.AAU")
 
 ```{r}
 library(GSADF.AAU)
-gsadf <- GSADF(ticker = "btc-usd",
-                          x = NULL,
-                          min_window = 60,
-                          step_length = 5,
-                          window_increase = 10,
-                          date_from = "2020-01-01",
-                          date_to = "2020-12-01",
-                          drift = F,
-                          trend = F,
-                          risk_free_rate = 0.01,
-                          own_df_distribution = NULL)
+
+# datasets from package
+data("df_distri")
+data("df_distri_drift")
+data("df_distri_drift_trend")
+
+gsadf <- GSADF(
+  ticker = "btc-usd",
+  x = NULL,
+  df_distribution = df_distri,
+  min_window = 60,
+  step_length = 5,
+  window_increase = 10,
+  date_from = "2020-01-01",
+  date_to = "2020-12-01",
+  drift = F,
+  trend = F,
+  risk_free_rate = 0.01,
+  save_models = F
+)
 
 head(gsadf)
-
 ```
 
 
@@ -54,16 +62,16 @@ head(gsadf)
 
 ```{r}
 
-plot_GSADF(u = gsadf,
-                      d = NULL,
-                      d_t = NULL,
-                      p_restrict = 0.95,
-                      start_date_tq_get = "2020-01-01",
-                      image_name = NULL,
-                      valuta = "USD",
-                      aktie = "Bitcoin")
-
-
+plot_GSADF(
+  u = gsadf,
+  d = NULL,
+  d_t = NULL,
+  p_restrict = 0.95,
+  start_date_tq_get = "2020-01-01",
+  image_name = NULL,
+  valuta = "USD",
+  aktie = "Bitcoin"
+)
 ```
 
 
@@ -74,7 +82,4 @@ plot_GSADF(u = gsadf,
 tabel_gsadf <- Tabel_GSADF(gsadf = gsadf)
 
 tabel_gsadf
-
-
 ```
-
